--- a/backend/CyberArtworkBackend/build.gradle
+++ b/backend/CyberArtworkBackend/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	runtimeOnly 'mysql:mysql-connector-java:8.0.33'  // Cambia la versión si es necesario
+	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
