--- a/backend/CyberArtworkBackend/src/main/resources/application.properties
+++ b/backend/CyberArtworkBackend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=CyberArtworkBackend
+app.upload.dir=../images
 
 spring.datasource.url=jdbc:mysql://localhost:3306/cyberartworkdb
 spring.datasource.username=root
